--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.11",
     "mongoose": "^5.11.13",
+    "multer": "^1.4.3",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.4.17"
   },
